styled the webpage and defined layout with CSS Grid

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
 :root {
+    --blue: hsl(246, 80%, 60%);
     --work-bg:hsl(15, 100%, 70%);
     --play-bg: hsl(195, 74%, 62%);
     --study-bg: hsl(348, 100%, 68%);
@@ -20,7 +21,194 @@
 
 body {
     width: 100%; 
-    height: 100%;
+    height: 100vh;
+    background-color: var(--darker-blue);
     font-size: 1.125rem;
     font-family: 'Rubik', sans-serif;
+    display: grid;
+    place-items: center;
 }
+
+/* Main container */
+main {
+    width: min(60rem, 95%);
+    color: white;
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: 25% 75%;
+}
+
+.profile {
+    background-color: var(--dark-blue);;
+    border-radius: .5rem;
+    display: grid;
+    grid-template-rows: 70% 30%;
+}
+
+/* User Profile styling */
+.profile .profile__user {
+    background-color: var(--blue);
+    border-radius: .5rem;
+    padding: 2rem;
+}
+
+.profile .profile__user img {
+    width: 5rem;
+    height: 5rem;
+    border: 2px solid white;
+    border-radius: 50%;
+    margin-bottom: 1rem;
+}
+
+.profile .profile__user p {
+    font-size: 2rem;
+    font-weight: 500;
+}
+
+.profile .profile__user p > span {
+    font-size: .7rem;
+    opacity: .7;
+    color: pale-blue;
+}
+
+/* Picky the time frame for stat section */
+.profile .profile__timeframe {
+    background-color: var(--dark-blue);
+    color: var(--pale-blue);
+    padding: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    justify-content: center;
+    border-bottom-left-radius: .5rem;
+    border-bottom-right-radius: .5rem;
+}
+
+/* Stats section */
+.stats {
+    /* background-color: yellow; */
+    display: grid;
+    gap: 1rem;
+    grid-template-columns: repeat(auto-fit, minmax(14.3rem, 1fr));
+}
+
+/* Styling all the stats cards */
+.stats > .stats__card {
+    position: relative;
+    margin-top: 2.5rem;
+    background-color: var(--dark-blue);
+    border-radius: .5rem;
+    display: grid;
+    gap: .5rem;
+    align-items: center;
+    padding: 1rem;
+}
+
+/* Creating the above colored part of the card */
+.stats > .stats__card::before {
+    content: "";
+    position: absolute;
+    z-index: -1;
+    width: 100%; 
+    padding: 2rem 0;
+    background-color: var(--work-bg);
+    background-image: url("../images/icon-work.svg");
+    background-repeat: no-repeat;
+    background-position-x: right;
+    background-size: 25%;
+    top: -20%;
+    border-radius: .5rem;
+}
+
+.stats > .stats__card:nth-of-type(2)::before {
+    background-color: var(--play-bg);
+    background-image: url("../images/icon-play.svg");
+}
+
+.stats > .stats__card:nth-of-type(3)::before {
+    background-color: var(--study-bg);
+    background-image: url("../images/icon-study.svg");
+}
+
+.stats > .stats__card:nth-of-type(4)::before {
+    background-color: var(--exercise-bg);
+    background-image: url("../images/icon-exercise.svg");
+}
+
+.stats > .stats__card:nth-of-type(5)::before {
+    background-color: var(--social-bg);
+    background-image: url("../images/icon-social.svg");
+}
+
+.stats > .stats__card:nth-of-type(6)::before {
+    background-color: var(--selfcare-bg);
+    background-image: url("../images/icon-self-care.svg");
+}
+
+
+.stats__card > p {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.stats__card > div h1 {
+    font-weight: 400;
+    margin-bottom: .5rem;
+}
+
+.stats__card > div p {
+    color: var(--pale-blue);
+    font-size: .7rem;
+}
+
+
+/* Styling the mobile version */
+@media screen and (max-width: 900px) {
+    main {
+        padding-top: 2rem; 
+        padding-bottom: 2rem;
+        grid-template-columns: 1fr;
+    }
+
+    .profile {
+        grid-template-rows: 1fr;
+    }
+    
+    .profile .profile__user {
+        display: flex;
+        align-items: center;
+    }
+    
+    .profile .profile__user img {
+        margin-bottom: -1rem;
+        margin-right: 1rem;
+    }
+    
+    .profile .profile__user p {
+        color: var(--pale-blue);
+    }
+    
+    .profile .profile__timeframe {
+        flex-direction: row;
+        justify-content: space-between;
+    }
+
+    .stats__card > div{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
+
+    .stats__card > div h1 {
+        color: var(--pale-blue);
+        font-size: 1.5rem;
+    }
+
+    .stats > .stats__card::before {
+        background-size: 15% 100%;
+        top: -30%;
+    }
+    
+}
+
